Fixed problem with text-align.

--- a/css/content.css
+++ b/css/content.css
@@ -35,6 +35,8 @@ div.restoresanity.info {
 
 	font-size: 1em;
 	line-height: 15px;
+
+	text-align: left;
 }
 
 p.restoresanity.rulename {
